Fix grid not wrapping correctly to square

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    padding: 32px;
 }
 
 .container {
@@ -8,12 +13,11 @@
     height: 800px;
     display: flex;
     flex-wrap: wrap;
-    /* align-content: center; */
+    align-content: flex-start; 
+    border: 1px solid black;   
 }
 
 .square {
-    width: 50px;
-    height: 50px;
-    background-color: aliceblue;
     border: 1px solid black;
+    flex: 0 0 auto;
 }
